--- a/app/src/main/res/layout/item_category_image.xml
+++ b/app/src/main/res/layout/item_category_image.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imgCategoryImage"
+            android:id="@+id/img_wishlist"
             android:layout_width="200dp"
             android:layout_height="110dp"
             android:background="@color/blue_grey_900"
