--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -20,7 +20,7 @@
         tools:viewBindingIgnore="false">
 
         <ImageView
-            android:id="@+id/imgCategoryImage"
+            android:id="@+id/img_wishlist"
             android:layout_width="120dp"
             android:layout_height="165dp"
             tools:src="@color/deep_orange_600" />
@@ -28,7 +28,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/tvProductPrice"
+        android:id="@+id/txt_wishlist_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/sb_size_8"
