--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clProductRootView"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -20,15 +20,15 @@
         tools:viewBindingIgnore="false">
 
         <ImageView
-            android:id="@+id/imgCategoryImage"
+            android:id="@+id/img_wish_list"
             android:layout_width="120dp"
             android:layout_height="165dp"
-            tools:src="@color/deep_orange_600" />
+            android:src="@color/grey_300" />
 
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/tvProductPrice"
+        android:id="@+id/txt_wish_list_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/sb_size_8"
@@ -39,16 +39,6 @@
         app:layout_constraintEnd_toEndOf="@+id/cvDummy"
         app:layout_constraintStart_toStartOf="@id/cvDummy"
         app:layout_constraintTop_toBottomOf="@id/cvDummy" />
-
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/cvDummy"
-        app:layout_constraintStart_toStartOf="@id/cvDummy"
-        app:layout_constraintTop_toBottomOf="@id/cvDummy"
-        android:id="@+id/imgProductImage"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
