new fragment scrolling

--- a/app/src/main/res/layout/fragment_wish_list.xml
+++ b/app/src/main/res/layout/fragment_wish_list.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".fragment.WishListFragment">
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/wish_list_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:nestedScrollingEnabled="false"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:spanCount="2"
         tools:listitem="@layout/item_wishlist" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
