--- a/app/src/main/res/layout/item_container_new_trends.xml
+++ b/app/src/main/res/layout/item_container_new_trends.xml
@@ -11,9 +11,9 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/sb_size_8"
         android:layout_marginBottom="@dimen/sb_size_8"
-        android:background="@color/blue_50"
         android:contentDescription="@string/new_arrivals"
         android:scaleType="centerCrop"
+        android:src="@color/blue_100"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
