--- a/app/src/main/res/layout/fragment_new_trend.xml
+++ b/app/src/main/res/layout/fragment_new_trend.xml
@@ -6,61 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".fragment.NewTrendFragment">
 
-
-    <ImageView
-        android:id="@+id/image1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="@dimen/sb_size_8"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="@dimen/sb_size_8"
-        android:background="@color/grey_300"
-        android:contentDescription="@string/new_arrivals"
-        app:layout_constraintBottom_toTopOf="@id/guideline1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
-
-    <ImageView
-        android:id="@+id/image2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="@dimen/sb_size_8"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="@dimen/sb_size_8"
-        android:background="@color/grey_300"
-        android:contentDescription="@string/new_arrivals"
-        app:layout_constraintBottom_toTopOf="@id/guideline2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline1" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.50" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="@dimen/sb_size_0"
-        android:layout_height="@dimen/sb_size_0"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/item_container_new_trends"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline2" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/image1"
+                android:layout_width="0dp"
+                android:layout_height="170dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="@dimen/sb_size_8"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="@dimen/sb_size_8"
+                android:background="@color/grey_300"
+                android:contentDescription="@string/new_arrivals"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/image2"
+                android:layout_width="0dp"
+                android:layout_height="170dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="@dimen/sb_size_8"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="@dimen/sb_size_8"
+                android:background="@color/grey_300"
+                android:contentDescription="@string/new_arrivals"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/image1" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="@dimen/sb_size_0"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="@dimen/sb_size_8"
+                android:layout_marginEnd="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/image2"
+                tools:listitem="@layout/item_container_new_trends" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
