--- a/app/src/main/res/layout/item_category_large_image.xml
+++ b/app/src/main/res/layout/item_category_large_image.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         <ImageView
             android:id="@+id/imgCategoryImage"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="225dp"
             android:background="@color/blue_grey_900"
             android:contentDescription="@string/desc_category_image"
             android:scaleType="centerCrop"
