--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,6 +26,7 @@
                 android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/gothamfont"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 android:paddingBottom="6dp"
@@ -68,6 +69,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/coupons"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -100,6 +102,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/points"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -132,6 +135,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/wallet"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -164,6 +168,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/gift_card"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -192,6 +197,7 @@
                 android:id="@+id/textView_my_orders"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/gothamfont"
                 android:paddingStart="12dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="12dp"
@@ -234,6 +240,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/unpaid"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -266,6 +273,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/processing"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -298,6 +306,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/shipping"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -330,6 +339,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/returns"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -358,6 +368,7 @@
                 android:id="@+id/text_more_services"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/gothamfont"
                 android:paddingStart="12dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="12dp"
@@ -400,6 +411,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/support"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -432,6 +444,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/share_and_earn"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -468,6 +481,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:fontFamily="@font/gothamfont"
                         android:text="@string/my_reference"
                         android:textAlignment="center"
                         android:textColor="@color/black"
