--- a/app/src/main/res/layout/item_container_new_trends.xml
+++ b/app/src/main/res/layout/item_container_new_trends.xml
@@ -5,47 +5,73 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/background_image"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sub_layout"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/sb_size_8"
-        android:layout_marginBottom="@dimen/sb_size_8"
-        android:contentDescription="@string/new_arrivals"
-        android:scaleType="centerCrop"
-        android:src="@color/blue_100"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/background_image"
+            android:layout_width="@dimen/sb_size_0"
+            android:layout_height="@dimen/sb_size_0"
+            android:contentDescription="@string/new_arrivals"
+            android:scaleType="centerCrop"
+            android:src="@color/blue_100"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/new_text_view"
+            android:layout_width="@dimen/sb_size_0"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/sb_size_32"
+            android:fontFamily="@font/gothamfont"
+            android:text="New In Dresses"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/sb_text_size_18"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/new_text_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/sb_size_12"
+            android:layout_marginBottom="@dimen/sb_size_16"
+            android:background="@color/white"
+            android:fontFamily="@font/gothamfont"
+            android:paddingStart="@dimen/sb_size_4"
+            android:paddingTop="@dimen/sb_size_2"
+            android:paddingEnd="@dimen/sb_size_4"
+            android:paddingBottom="@dimen/sb_size_2"
+            android:text="Hooded, over sized, Graphic, tie dye"
+            android:textAlignment="center"
+            android:textColor="@color/grey_700"
+            android:textSize="@dimen/sb_text_size_12"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/new_text_view" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/child_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/sb_size_4"
+        android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/new_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="New In Dresses"
-        android:textColor="@color/black"
-        android:textSize="@dimen/sb_text_size_24"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/background_image"
-        app:layout_constraintTop_toTopOf="@+id/background_image" />
-
-    <TextView
-        android:id="@+id/new_text_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/white"
-        android:padding="6dp"
-        android:text="Hooded, over sized, Graphic, tie dye"
-        android:textColor="@color/grey_700"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_text_view" />
-
+        app:layout_constraintTop_toBottomOf="@id/sub_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
