fragment new demo images

--- a/app/src/main/res/layout/item_container_new_trends.xml
+++ b/app/src/main/res/layout/item_container_new_trends.xml
@@ -29,8 +29,12 @@
             android:id="@+id/new_text_view"
             android:layout_width="@dimen/sb_size_0"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/sb_size_32"
-            android:fontFamily="@font/gothamfont"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="@dimen/sb_size_36"
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/gotham_font"
+            android:singleLine="true"
             android:text="New In Dresses"
             android:textAlignment="center"
             android:textColor="@color/black"
@@ -44,14 +48,18 @@
             android:id="@+id/new_text_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/sb_size_12"
-            android:layout_marginBottom="@dimen/sb_size_16"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="36dp"
             android:background="@color/white"
-            android:fontFamily="@font/gothamfont"
-            android:paddingStart="@dimen/sb_size_4"
-            android:paddingTop="@dimen/sb_size_2"
-            android:paddingEnd="@dimen/sb_size_4"
-            android:paddingBottom="@dimen/sb_size_2"
+            android:ellipsize="end"
+            android:fontFamily="@font/gotham_font"
+            android:paddingStart="@dimen/sb_size_20"
+            android:paddingTop="@dimen/sb_size_8"
+            android:paddingEnd="@dimen/sb_size_20"
+            android:paddingBottom="@dimen/sb_size_8"
+            android:singleLine="true"
             android:text="Hooded, over sized, Graphic, tie dye"
             android:textAlignment="center"
             android:textColor="@color/grey_700"
