--- a/app/src/main/res/layout/item_new_trend_product.xml
+++ b/app/src/main/res/layout/item_new_trend_product.xml
@@ -31,9 +31,10 @@
         android:id="@+id/txt_child_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="@dimen/sb_size_8"
         android:layout_marginBottom="@dimen/sb_size_8"
-        android:fontFamily="@font/gothamfont"
+        android:fontFamily="@font/gotham_font"
         android:textColor="@color/black"
         android:textSize="@dimen/sb_text_size_14"
         android:textStyle="normal"
