--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/textView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/gothamfont"
+                android:fontFamily="@font/gotham_font"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 android:paddingBottom="6dp"
@@ -69,7 +69,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/coupons"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -102,7 +102,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/points"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -135,7 +135,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/wallet"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -168,7 +168,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/gift_card"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -197,7 +197,7 @@
                 android:id="@+id/textView_my_orders"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/gothamfont"
+                android:fontFamily="@font/gotham_font"
                 android:paddingStart="12dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="12dp"
@@ -240,7 +240,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/unpaid"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -273,7 +273,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/processing"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -306,7 +306,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/shipping"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -339,7 +339,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/returns"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -368,7 +368,7 @@
                 android:id="@+id/text_more_services"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/gothamfont"
+                android:fontFamily="@font/gotham_font"
                 android:paddingStart="12dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="12dp"
@@ -411,7 +411,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/support"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -444,7 +444,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/share_and_earn"
                         android:textAlignment="center"
                         android:textColor="@color/black"
@@ -467,9 +467,6 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:contentDescription="@string/my_reference"
-                        android:paddingStart="12dp"
-                        android:paddingEnd="12dp"
-                        android:paddingBottom="16dp"
                         android:src="@drawable/ic_reference"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -481,7 +478,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
-                        android:fontFamily="@font/gothamfont"
+                        android:fontFamily="@font/gotham_font"
                         android:text="@string/my_reference"
                         android:textAlignment="center"
                         android:textColor="@color/black"
