--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/sb_size_8"
-        android:fontFamily="@font/gothamfont"
+        android:fontFamily="@font/gotham_font"
         android:text="1234 $"
         android:textColor="@color/grey_900"
         android:textSize="@dimen/sb_text_size_15"
