--- a/app/src/main/res/layout/fragment_wish_list.xml
+++ b/app/src/main/res/layout/fragment_wish_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.WishListFragment">
+    tools:context=".fragment.profilefragment.WishListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/wish_list_recycler_view"
