--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,9 +17,9 @@
         tools:layout="@layout/fragment_category" />
     <fragment
         android:id="@+id/newTrendFragment"
-        android:name="com.shopping.bloom.fragment.NewTrendFragment"
+        android:name="com.shopping.bloom.fragment.NewFragment"
         android:label="@string/new_"
-        tools:layout="@layout/fragment_new_trend" />
+        tools:layout="@layout/fragment_new" />
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.shopping.bloom.fragment.profilefragment.ProfileFragment"
