Category list is now sorted and minor fixes

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,4 +25,9 @@
         android:name="com.shopping.bloom.fragment.ProfileFragment"
         android:label="@string/me"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/viewCategoryFragment"
+        android:name="com.shopping.bloom.fragment.ViewCategoryFragment"
+        android:label="fragment_view_category"
+        tools:layout="@layout/fragment_view_category" />
 </navigation>
