--- a/app/src/main/res/layout/item_view_category.xml
+++ b/app/src/main/res/layout/item_view_category.xml
@@ -20,7 +20,7 @@
         android:layout_width="@dimen/sb_size_32"
         android:layout_height="@dimen/sb_size_32"
         android:layout_margin="@dimen/sb_size_16"
-        android:background="@drawable/ic_fav"
+        android:background="@drawable/ic_favourite_product"
         android:padding="@dimen/sb_size_16"
         app:layout_constraintBottom_toBottomOf="@+id/imgProductImage"
         app:layout_constraintEnd_toEndOf="@+id/imgProductImage" />
@@ -38,41 +38,28 @@
         app:layout_constraintStart_toStartOf="@+id/imgProductImage"
         app:layout_constraintTop_toBottomOf="@+id/imgProductImage" />
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/sb_size_8"
         android:layout_marginBottom="@dimen/sb_size_10"
-        android:gravity="start"
         android:orientation="horizontal"
-        android:paddingVertical="@dimen/sb_size_8"
-        android:paddingHorizontal="@dimen/sb_size_8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/imgProductImage"
         app:layout_constraintStart_toStartOf="@+id/tvProductPrice"
         app:layout_constraintTop_toBottomOf="@id/tvProductPrice">
 
-        <View
-            android:id="@+id/viewColor1"
-            android:layout_width="@dimen/sb_size_28"
-            android:layout_height="@dimen/sb_size_28"
-            android:background="@color/blue_grey_900" />
+        <LinearLayout
+            android:id="@+id/llColorOptions"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:orientation="horizontal"
+            android:paddingHorizontal="@dimen/sb_size_8"
+            android:paddingVertical="@dimen/sb_size_8">
 
-        <View
-            android:id="@+id/viewColor2"
-            android:layout_width="@dimen/sb_size_28"
-            android:layout_height="@dimen/sb_size_28"
-            android:layout_marginStart="@dimen/sb_size_26"
-            android:background="@color/blue_grey_900" />
-
-        <View
-            android:id="@+id/viewColor3"
-            android:layout_width="@dimen/sb_size_28"
-            android:layout_height="@dimen/sb_size_28"
-            android:layout_marginStart="@dimen/sb_size_26"
-            android:background="@color/blue_grey_900" />
-
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
