--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,11 @@
         <item name="fontFamily">@font/gotham_font</item>
     </style>
 
+    <style name="RatingBarTheme" parent="Theme.Ecommerce">
+        <item name="colorControlNormal">@color/grey_600</item>
+        <item name="colorControlActivated">@color/amber_400</item>
+    </style>
+
     <style name="BottomNavigationTheme" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">@color/active_tab_color</item>
         <item name="android:textColorSecondary">@color/inactive_tab_color</item>
