--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/clToolbarRoot"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
-    android:elevation="@dimen/sb_size_16"
-    android:layout_height="wrap_content">
+    android:elevation="@dimen/sb_size_8">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -18,8 +19,8 @@
             android:id="@+id/topAppBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:focusableInTouchMode="true"
-            android:background="@color/white">
+            android:background="@color/white"
+            android:focusableInTouchMode="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -29,23 +30,23 @@
                     android:id="@+id/imgMail"
                     android:layout_width="27dp"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/ic_mail"
+                    android:contentDescription="@string/desc_mail"
                     android:scaleType="fitCenter"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="@string/desc_mail"/>
+                    app:srcCompat="@drawable/ic_mail" />
 
                 <ImageView
                     android:id="@+id/imgFavourites"
                     android:layout_width="@dimen/sb_size_25"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/sb_size_14"
-                    app:srcCompat="@drawable/ic_favourites"
+                    android:contentDescription="@string/desc_favourites"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/imgMail"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="@string/desc_favourites" />
+                    app:srcCompat="@drawable/ic_favourites" />
 
                 <TextView
                     android:id="@+id/tvTitle"
@@ -69,15 +70,15 @@
                     android:layout_marginHorizontal="@dimen/sb_size_16"
                     android:layout_marginVertical="@dimen/sb_size_8"
                     android:background="@drawable/bg_search_bar"
-                    android:hint="@string/hint_search"
                     android:focusedByDefault="false"
                     android:gravity="center_horizontal|center_vertical"
+                    android:hint="@string/hint_search"
+                    android:inputType="text"
                     android:paddingHorizontal="@dimen/sb_size_6"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/imgFavourites"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:inputType="text" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <!--Right side icon is not needed since they can be inflated with
                         onOptionMenuCreated -->
