--- a/app/src/main/res/layout/activity_login_with_pass.xml
+++ b/app/src/main/res/layout/activity_login_with_pass.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    tools:context=".activities.RegisterActivity">
+    tools:context=".activities.LoginWithPassActivity">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
@@ -20,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.core.widget.NestedScrollView
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fillViewport="true">
@@ -28,17 +27,18 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/constrainLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cardView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/sb_size_50"
+                        android:layout_marginTop="@dimen/sb_size_80"
                         app:cardBackgroundColor="@color/white"
                         app:cardCornerRadius="@dimen/sb_size_60"
                         app:cardElevation="@dimen/sb_size_0"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.498"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
@@ -55,38 +55,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/sb_size_20"
-                        android:layout_marginTop="@dimen/sb_size_40"
+                        android:layout_marginTop="@dimen/sb_size_70"
                         app:hintTextColor="@color/black"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/cardView">
+                        app:layout_constraintTop_toBottomOf="@+id/cardView"
+                        tools:layout_editor_absoluteX="20dp">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/nameEditText"
+                            android:id="@+id/inputEditText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Name"
-                            android:inputType="textEmailAddress" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/textInputLayout1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/sb_size_20"
-                        android:layout_marginTop="@dimen/sb_size_12"
-                        app:hintTextColor="@color/black"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/emailEditText"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="Email"
-                            android:inputType="textEmailAddress" />
+                            android:hint="Mobile No. / Email"
+                            android:inputType="text" />
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -97,28 +76,8 @@
                         android:layout_marginTop="12dp"
                         app:hintTextColor="@color/black"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.6"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/numberEditText"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="Number"
-                            android:inputType="phone" />
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/textInputLayout3"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/sb_size_20"
-                        android:layout_marginTop="12dp"
-                        app:hintTextColor="@color/black"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
+                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/passwordEditText"
@@ -135,31 +94,28 @@
                         android:layout_marginHorizontal="@dimen/sb_size_20"
                         android:layout_marginTop="@dimen/sb_size_40"
                         android:background="@color/black"
-                        android:text="Sign Up"
+                        android:onClick="signIn"
+                        android:text="Sign in"
                         android:textColor="@color/white"
                         android:textSize="@dimen/sb_text_size_17"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
+                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
 
                     <TextView
-                        android:id="@+id/textView4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:gravity="center"
-                        android:lineSpacingExtra="@dimen/sb_size_4"
+                        android:layout_marginTop="16dp"
                         android:padding="@dimen/sb_size_5"
-                        android:text="By clicking on sign up, you agree to our\nterms and conditions"
+                        android:onClick="signUpActivity"
+                        android:text="New user? Sign up"
                         android:textColor="@color/black"
-                        android:textSize="@dimen/sb_text_size_15"
+                        android:textSize="@dimen/sb_size_15"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.495"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/signInButton" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.core.widget.NestedScrollView>
+            </ScrollView>
 
             <ViewStub
                 android:id="@+id/vsEmptyScreen"
@@ -171,7 +127,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
